# introToMechatronics

./: .gitignore  .gitmodules  README.md  clockPlot.css  demo.html
01Preliminaries/: index.html
01Preliminaries/jsAnim/: h0v1.js  h0v2.js  jsAnim.js
hw6/: index.html
hw6/js/controllers/: slidecontent.js
hw6/jsAnim/: h0v0.js  h0v1.js  h0v2.js  jsAnim.js  sysClk.js
hw6/plugin/markdown/: markdown.js
hw6/plugin/math/: math.esm.js  math.esm.js.old  math.js  plugin.js
hw6/plugin/notes/: notes.js  plugin.js
i2c/: index.html
i2c/jsAnim/: h0v3.js  h0v4.js  jsAnim.js
jsAnim/: jsAnim.js
jsAnim/pwm/: ccReg.js  clkDiv.js  clkDtSldr.js  clkDtSldr2.js  clkDtSldr3.js  ctrReg.js  ctrReg2.js  divClk.js  divClk2.js  divClkFrqSldr.js  divClkFrqSldr2.js  divReg.js  pwmOut.js  sysClk.js  sysClkFrqSldr.js  topReg.js  topReg2.js
pidControl/: index.html
pidControl/js/utils/: util.js
pidControl/jsAnim/: bulbGlow.js  bulbIlumPlot.js  h0v1.js  h0v2.js  h0v3.js  h0v4.js  jsAnim.js  stCurve.js  sysClk.js
powerManagement/arduinoCode/: arduinoCode.ino  gndTest.ino
powerManagement/picoCode/: CMakeLists.txt  ledIRQ.cpp
preliminaries/: index.html
preliminaries/jsAnim/: h0v1.js  h0v2.js  h0v5.js
pwm/: README.md  clockPlot.css  index.html
pwm/jsAnim/: h0v1.js  h0v3.js  h0v4.js  h0v5.js  jsAnim.js
revealExtras/theme/: mechatronics.css
stCurve/: index.html
stCurve/js/: reveal.js
stCurve/jsAnim/: jsAnim.js  noLoadSpeed.js  stCurve.js  stallTq.js  vsMax.js
uart/: dist  index.html
uart/jsAnim/: h0v2.js  h0v3.js
wavedrom/: default.js  narrow.js  wavedrom.js
(+29 files in other folders)
